Stable-Diffusion-UI-Agones/ingress-iap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd-agones-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sd-agones
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: stable-diffusion-nginx-service # Name of the Service targeted by the Ingress
      port:
        number: 8080 # Should match the port used by the Service
